# genome

./: Makefile  README.md  genome.c
editors/: genome.vim
examples/: hello.gn
src/: genome.asm  genome.c
